--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>チャット</title>
+    <title>まったり話そう</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
