--- a/template.html
+++ b/template.html
@@ -2,11 +2,11 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>まったり話そう</title>
+    <title>チャット</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <h1 class="app-title">チャット</h1>
+    <h1 class="app-title">まったり話そう(*´ω｀)</h1>
     <ul>
       <!-- posts -->
     </ul>
